--- a/src/views/users/create.handlebars
+++ b/src/views/users/create.handlebars
@@ -1,8 +1,8 @@
 <h1>A New User Create Form</h1>
 <form action="/users" method="POST">
     <div class="form-group">
-        <label for="name">Name:</label>
-        <input type="text" id="name" name="name" required>
+        <label for="username">Name:</label>
+        <input type="text" id="username" name="username" required>
     </div>
     <div class="form-group">
         <label for="email">Email:</label>
