--- a/src/views/users/edit.handlebars
+++ b/src/views/users/edit.handlebars
@@ -2,8 +2,8 @@
 <form action="/users/{{user.id}}" method="POST">
     <input type="hidden" name="_method" value="POST">
     <div class="form-group">
-        <label for="name">Name:</label>
-        <input type="text" id="name" name="name" value="{{user.name}}" required>
+        <label for="username">Name:</label>
+        <input type="text" id="username" name="username" value="{{user.username}}" required>
     </div>
     <div class="form-group">
         <label for="email">Email:</label>
