project to change pgdatabase

--- a/src/views/home.handlebars
+++ b/src/views/home.handlebars
@@ -1,2 +1,5 @@
-<h1>Welcome!</h1>
-<p><a href="/users">Users Management</a></p>
+<div class="welcome-container">
+    <h1 class="welcome-title">Xush Kelibsiz!</h1>
+    <p class="welcome-subtitle">Bu sizning foydalanuvchilarni boshqarish tizimingiz.</p>
+    <p><a href="/users" class="users-management-link">Foydalanuvchilarni Boshqarish</a></p>
+</div>
