--- a/src/views/partials/userCard.handlebars
+++ b/src/views/partials/userCard.handlebars
@@ -1,13 +1,12 @@
 <div class="user-card">
-    <h3>{{name}}</h3>
+    <h3>{{username}}</h3>
     <p>Email: {{email}}</p>
     <p>Age: {{age}}</p>
     <div class="actions">
         <a href="/users/{{id}}" class="view-btn">View</a>
         <a href="/users/{{id}}/edit" class="edit-btn">Edit</a>
-        <form action="/users/{{id}}/delete" method="POST" style="display:inline;">
-            <input type="hidden" name="_method" value="POST">
-            <button type="submit" class="delete-btn">Delete</button>
+        <form action="/users/{{id}}?_method=DELETE"  method="POST" style="display:inline;">
+             <button type="submit" class="delete-btn">Delete</button>
         </form>
     </div>
 </div>
