--- a/src/views/users/create.handlebars
+++ b/src/views/users/create.handlebars
@@ -1,4 +1,5 @@
-<h1>A New User Create Form</h1>
+<div class="form-container">
+    <h1>A New User Create Form</h1>
 <form action="/users" method="POST">
     <div class="form-group">
         <label for="username">Name:</label>
@@ -15,3 +16,4 @@
     <button type="submit" class="save-btn">Save</button>
     <a href="/users" class="cancel-btn">Cancel</a>
 </form>
+</div>
