--- a/src/views/users/edit.handlebars
+++ b/src/views/users/edit.handlebars
@@ -1,4 +1,5 @@
-<h1>Edit User Form</h1>
+<div class="form-container">
+    <h1>Edit User Form</h1>
 <form action="/users/{{user.id}}" method="POST">
     <input type="hidden" name="_method" value="POST">
     <div class="form-group">
@@ -16,3 +17,4 @@
     <button type="submit" class="save-btn">Save</button>
     <a href="/users/{{user.id}}" class="cancel-btn">Cancel</a>
 </form>
+</div>
